API1/Grafana/grafana-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
  - host: kong-proxy.local
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
